[Bug #164927648] Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -18,7 +18,6 @@
 }
 
 body {
-  min-width: 635px !important;
   font-size: 1em;
   line-height: 1.4;
   font-family: var(--bodyFontFamily), var(--bodyFontFamilyFallback);
